--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 body {
   font-family: "Roboto", "arial";
@@ -13,6 +14,7 @@ body {
   background: white;
   border-radius: 10px;
   margin-bottom: 25px;
+  box-shadow: 4px 5px 7px 1px lightgrey;
 }
 .card__h4 {
   margin-bottom: 0px;
@@ -41,6 +43,12 @@ body {
 .card__picto {
   align-items: center;
   font-size: 25px;
+  color: black;
+  /* CODE à voir */
+  transition: color 5ms;
+}
+.card__picto:hover {
+  color: red;
 }
 
 .nav {
@@ -71,12 +79,19 @@ body {
   margin-top: auto;
   margin-bottom: auto;
 }
-.nav li {
+.nav__li {
   background: #f8f8f8;
   border-radius: 20px;
   width: 85%;
   margin: auto;
   margin-bottom: 10px;
+  box-shadow: 4px 5px 7px 1px lightgrey;
+}
+.nav__li:hover {
+  background-color: rgba(147, 86, 220, 0.1);
+}
+.nav__li:hover .nav__picto {
+  color: #9356DC;
 }
 .nav ol {
   padding: 0px;
@@ -134,6 +149,10 @@ body {
   background: linear-gradient(#FF79DA, #9356DC);
   padding: 15px;
   color: white;
+  box-shadow: 4px 5px 7px 1px lightgrey;
+}
+.header__btn:hover {
+  filter: brightness(120%);
 }
 
 .footer {
