--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 body {
   font-family: "Roboto", "arial";
@@ -41,14 +40,25 @@ body {
   border-radius: 10px 10px 0 0;
 }
 .card__picto {
+  display: flex;
   align-items: center;
   font-size: 25px;
   color: black;
-  /* CODE à voir */
-  transition: color 5ms;
+  transition: all 10s ease-in;
+  /* marche pas */
 }
 .card__picto:hover {
-  color: red;
+  display: none;
+}
+.card__picto:hover + .picto2 {
+  display: flex;
+  color: #c120c0;
+}
+.card .picto2 {
+  display: none;
+  align-items: center;
+  font-size: 25px;
+  background: white;
 }
 
 .nav {
