--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,7 @@ body {
 .card__img {
   display: flex;
   align-items: center;
+  object-fit: cover;
   flex-wrap: wrap;
   width: 100%;
   height: 45vw;
@@ -41,30 +42,49 @@ body {
 }
 .card__picto {
   display: flex;
+  visibility: visible;
   align-items: center;
   font-size: 25px;
   color: black;
-  transition: all 10s ease-in;
-  /* marche pas */
-}
-.card__picto:hover {
-  display: none;
-}
-.card__picto:hover + .picto2 {
-  display: flex;
-  color: #c120c0;
+  opacity: 1;
+  transition: opacity 1s;
+  /*&:hover{
+    display:none;
+  }
+  &:hover +.picto2{
+    display: flex;
+    opacity: 1;
+
+  }*/
 }
 .card .picto2 {
-  display: none;
+  display: flex;
+  position: relative;
+  left: -25px;
   align-items: center;
   font-size: 25px;
-  background: white;
+  color: #c120cc;
+  opacity: 0;
+  transition: opacity 1s 500ms;
+  transform-origin: left;
+}
+
+.testanimation {
+  display: flex;
+  align-items: center;
+}
+.testanimation:hover .card__picto {
+  opacity: 0;
+}
+.testanimation:hover .picto2 {
+  opacity: 1;
 }
 
 .nav {
   display: flex;
   flex-direction: column;
   width: 100%;
+  font-weight: bold;
 }
 .nav__picto {
   display: flex;
@@ -106,6 +126,54 @@ body {
 .nav ol {
   padding: 0px;
   list-style-type: circle;
+}
+
+.card-Menu {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  background: white;
+  border-radius: 10px;
+  margin-bottom: 25px;
+  box-shadow: 4px 5px 7px 1px lightgrey;
+}
+.card-Menu__price {
+  display: flex;
+  align-items: end;
+  padding-bottom: 5px;
+  margin-right: 20px;
+}
+.card-Menu:hover > .rotate {
+  height: auto;
+  width: 50px;
+}
+.card-Menu div {
+  padding: 5px 0px 0px 5px;
+}
+
+.menu {
+  position: relative;
+  top: -49px;
+  border-radius: 30px 30px 0px 0px;
+}
+.menu__titre {
+  margin-bottom: 0px;
+}
+
+h3 + hr {
+  margin: 5px 0px 10px 0px;
+  width: 15%;
+  height: 3px;
+  background-color: #99E2D0;
+  border: none;
+}
+
+.rotate {
+  height: 0px;
+  width: 0px;
+  padding: 0px;
+  background-color: #99E2D0;
+  transition: all 280ms linear;
 }
 
 .header {
@@ -211,6 +279,9 @@ section {
 }
 .justify-content__center {
   justify-content: center;
+}
+.justify-content .align-items__center {
+  align-items: middle;
 }
 
 /*# sourceMappingURL=style.css.map */
