--- a/sass/pages/_toute_les_autres_pages.scss
+++ b/sass/pages/_toute_les_autres_pages.scss
@@ -6,9 +6,24 @@
   border-radius: 10px;
   margin-bottom: 25px;
   box-shadow: 4px 5px 7px 1px lightgrey;
-  padding: 5px;
    
+  &__price{
+    display: flex;
+    align-items: end;
+    padding-bottom: 5px;
+    margin-right: 20px;
+  }
+  &:hover > .rotate{
+    height: auto;
+    width: 50px;
+
+
+  }
+  div{
+    padding: 5px 0px 0px 5px;
+  }
 }
+
 .menu{
   position: relative;
   top: -49px;
@@ -20,7 +35,18 @@
 
 h3 + hr{
   margin:5px 0px 10px 0px;
-  width:10%;
-  color:#99E2D0;
+  width:15%;
+  height: 3px;
+  background-color:#99E2D0;
+  border: none;
+}
+
+.rotate{
+  
+  height: 0px;
+  width: 0px;
+  padding: 0px;
+  background-color:#99E2D0;
+  transition: all 280ms linear;
 }
 
