--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,14 +128,41 @@ body {
   list-style-type: circle;
 }
 
+.container-menu {
+  background: #f8f8f8;
+}
+
+.btn--modif {
+  position: relative;
+  top: -36px;
+  position: relative;
+  top: -36px;
+  width: 40%;
+  justify-content: center;
+}
+
 .card-Menu {
   display: flex;
   flex-wrap: wrap;
+  overflow: hidden;
   width: 100%;
   background: white;
   border-radius: 10px;
   margin-bottom: 25px;
   box-shadow: 4px 5px 7px 1px lightgrey;
+}
+.card-Menu__body {
+  min-width: 100%;
+  transition: all 1s linear;
+}
+.card-Menu__p {
+  margin-bottom: 5px;
+  margin-top: 5px;
+  font-size: 14px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 80%;
 }
 .card-Menu__price {
   display: flex;
@@ -143,9 +170,14 @@ body {
   padding-bottom: 5px;
   margin-right: 20px;
 }
+.card-Menu:hover .card-Menu__body {
+  min-width: 80%;
+}
 .card-Menu:hover > .rotate {
-  height: auto;
-  width: 50px;
+  transform: translateX(0px);
+}
+.card-Menu:hover > .rotate span {
+  transform: rotate(0deg);
 }
 .card-Menu div {
   padding: 5px 0px 0px 5px;
@@ -169,11 +201,26 @@ h3 + hr {
 }
 
 .rotate {
-  height: 0px;
-  width: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0px;
   background-color: #99E2D0;
-  transition: all 280ms linear;
+  border-radius: 0px 10px 10px 0px;
+  height: auto;
+  width: 20%;
+  transform: translateX(100%);
+  z-index: 1;
+  transition: transform 500ms linear;
+}
+.rotate span {
+  transform: rotate(-360deg);
+  transition: transform 500ms 400ms ease-out;
+}
+
+.rotate-validate {
+  font-size: 30px;
+  color: white;
 }
 
 .header {
