--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -17,7 +17,9 @@
   }
   &__p{
     margin-bottom: 5px;
-    margin-top: 5px;}
+    margin-top: 5px;
+  }
+
   &__body{  
     width: 90%;
     margin: auto;
