--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,51 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand:wght@400;500;800");
+@keyframes fadein {
+  0% {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  70% {
+    opacity: 0;
+    transform: translateY(5px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@keyframes animebar {
+  0% {
+    opacity: 1;
+    transform: translatex(0%);
+  }
+  70% {
+    opacity: 1;
+    transform: translatex(250%);
+  }
+  100% {
+    opacity: 1;
+    transform: translatex(400%);
+  }
+}
+@keyframes animebar2 {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: 1;
+  }
+}
 body {
   font-family: "Roboto", "arial";
   width: 100%;
@@ -48,14 +95,6 @@ body {
   color: black;
   opacity: 1;
   transition: opacity 1s;
-  /*&:hover{
-    display:none;
-  }
-  &:hover +.picto2{
-    display: flex;
-    opacity: 1;
-
-  }*/
 }
 .card .picto2 {
   display: flex;
@@ -128,6 +167,76 @@ body {
   list-style-type: circle;
 }
 
+.X {
+  animation: fadein 500ms 4s ease-in-out backwards;
+}
+
+.loader {
+  border-top: 16px solid #FF79DA;
+  border-right: 16px solid linear-gradient(#FF79DA, #9356DC);
+  border-bottom: 16px solid #9356DC;
+  border-left: 16px solid linear-gradient(#FF79DA, #9356DC);
+  border-radius: 50%;
+  box-shadow: 4px 4px 4px 4px lightgrey;
+  width: 120px;
+  height: 120px;
+  animation: spin 3s linear backwards;
+  position: fixed;
+  top: 100px;
+  opacity: 0;
+}
+
+.pour-animation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.bar {
+  height: 20px;
+  width: 500px;
+  background: #F8F8F8;
+  border-radius: 25px;
+  box-shadow: 4px 5px 7px 1px lightgrey;
+  position: fixed;
+  opacity: 0;
+  top: 300px;
+  animation: animebar2 3s linear;
+}
+
+.bar2 {
+  height: 20px;
+  width: 100px;
+  background: linear-gradient(#FF79DA, #9356DC);
+  border-radius: 25px;
+  position: fixed;
+  opacity: 0;
+  animation: animebar 1s linear 3 alternate-reverse;
+}
+
+@media screen and (min-width: 988px) {
+  .carte-restaurant {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .card {
+    width: 20%;
+  }
+
+  .card__img {
+    height: 14vw;
+  }
+}
+@media screen and (max-width: 768px) {
+  .bar {
+    width: 50%;
+  }
+
+  .bar2 {
+    width: 10%;
+  }
+}
 .container-menu {
   background: #f8f8f8;
 }
@@ -141,6 +250,11 @@ body {
   justify-content: center;
 }
 
+.card--modif {
+  box-shadow: none;
+  background: #f8f8f8;
+}
+
 .card-Menu {
   display: flex;
   flex-wrap: wrap;
@@ -150,6 +264,21 @@ body {
   border-radius: 10px;
   margin-bottom: 25px;
   box-shadow: 4px 5px 7px 1px lightgrey;
+}
+.card-Menu--anim-0 {
+  animation: fadein 2s ease-in;
+  animation-delay: 0ms;
+  animation-fill-mode: backwards;
+}
+.card-Menu--anim-1 {
+  animation: fadein 2s ease-in;
+  animation-delay: 500ms;
+  animation-fill-mode: backwards;
+}
+.card-Menu--anim-2 {
+  animation: fadein 2s ease-in;
+  animation-delay: 1000ms;
+  animation-fill-mode: backwards;
 }
 .card-Menu__body {
   min-width: 100%;
@@ -188,6 +317,9 @@ body {
   top: -49px;
   border-radius: 30px 30px 0px 0px;
 }
+.menu__h2 {
+  font-family: "Shrikhand";
+}
 .menu__titre {
   margin-bottom: 0px;
 }
@@ -223,6 +355,17 @@ h3 + hr {
   color: white;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+
+@media screen and (min-width: 988px) {
+  .plat-menu {
+    display: flex;
+    justify-content: space-around;
+  }
+}
 .header {
   display: flex;
   flex-direction: column;
@@ -292,6 +435,10 @@ h3 + hr {
 .footer__img {
   width: 25%;
   filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);
+}
+
+#mail {
+  color: white;
 }
 
 footer {
