--- a/sass/pages/_toute_les_autres_pages.scss
+++ b/sass/pages/_toute_les_autres_pages.scss
@@ -1,4 +1,3 @@
- 
  .container-menu{
   background: #f8f8f8;
  }
@@ -10,16 +9,32 @@
     width: 40%;
    justify-content: center;
  }
+ .card--modif{
+  box-shadow:none;
+  background: #f8f8f8;
+
+ }
+
  .card-Menu{
   display: flex;
   flex-wrap: wrap;
   overflow: hidden;
-
   width: 100%;
   background: white;
   border-radius: 10px;
   margin-bottom: 25px;
   box-shadow: 4px 5px 7px 1px lightgrey;
+
+
+  @for $i from 0 through 2{
+      &--anim-#{$i}{
+          animation: fadein 2s ease-in;
+          animation-delay: 500ms*$i;
+          animation-fill-mode: backwards;
+
+
+      }
+  }
    &__body{
     min-width:100%;
     transition: all 1s linear;
@@ -58,8 +73,13 @@
   position: relative;
   top: -49px;
   border-radius: 30px 30px 0px 0px;
+  &__h2{
+    font-family: 'Shrikhand';
+
+  }
   &__titre{
     margin-bottom: 0px;
+    
   }
 }
 
@@ -96,4 +116,15 @@ h3 + hr{
 
   
 }
+a{
+  color: black;
+  text-decoration :none;
+}
 
+@media screen and (min-width:988px) {
+  .plat-menu{
+    display: flex; 
+    justify-content: space-around;
+  }
+  
+}
